Fixed resume scrollbar

--- a/css/styling.css
+++ b/css/styling.css
@@ -320,7 +320,7 @@ div.center-elements div {
     position:absolute;
     left:0px;
     bottom:0px;
-    min-width:600px;
+    min-width:675px;
     white-space: nowrap;
   	margin-left:12px;
     margin-top:0px;
